--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,5 +3,9 @@
     --bodyBg: #0C0F20;
     --cardBg: #222847;
     --mindsprintRed: #DA0806;
-    
+    --green: #00985b;
+    --successBlue: #00D9D9;
+    --successBlueBg: #DCFDFD;
+    --dangerPink: #F1416C;
+    --dangerPinkBg: #FFF5F8;
 }
