--- a/src/index.scss
+++ b/src/index.scss
@@ -85,6 +85,7 @@ button:focus-visible {
   min-height: calc(100vh - 64.8px);
   height: 100%;
   padding-top: 1.5rem;
+  overflow: hidden;
 
   .sidebar-icon-wrap {
     width: calc(32px + 0.35rem);
@@ -122,4 +123,10 @@ button:focus-visible {
 
 .main-layout {
   background-color: var(--bodyBg);
+  max-height: calc(100vh - 7rem);
+  // min-height: calc(100vh - 64.8px);
+}
+
+#vertical-bar-chart {
+  height: 207px !important;
 }
