--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -242,3 +242,11 @@ $sides: (
 .cursor-pointer {
     cursor: pointer;
 }
+
+.text-right {
+    text-align: right;
+}
+
+.text-left {
+    text-align: left;
+}
