--- a/src/components/tcbProductDetails/tcbProductDetails.scss
+++ b/src/components/tcbProductDetails/tcbProductDetails.scss
@@ -15,7 +15,7 @@
 }
 
 .price-card-price {
-    color: #E1E3EA;
+    color: #fff;
     font-family: Gilroy-SemiBold;
     font-size: 32px;
     font-style: normal;
@@ -24,7 +24,7 @@
 }
 
 .price-card-desc {
-    color: #B5B5C3;
+    color: #fff;
     font-family: Inter;
     font-size: 14px;
     font-style: normal;
