--- a/src/index.scss
+++ b/src/index.scss
@@ -129,7 +129,7 @@ button:focus-visible {
   // min-height: calc(100vh - 64.8px);
 }
 
-#vertical-bar-chart {
+.dashboard-container #vertical-bar-chart {
   height: 207px !important;
 }
 
