--- a/src/components/tcbTca/tcbTca.scss
+++ b/src/components/tcbTca/tcbTca.scss
@@ -14,7 +14,7 @@
     background-size: 50%;
     background: 
     linear-gradient(90deg, rgba(0, 213, 255, 0) 10%, #ccc 100%),
-    url(https://www.barry-callebaut.com/sites/default/files/styles/paragraph_page_intro_responsive/public/2020-11/WALL%20OF%20NUTS%20CASHEW-076.jpg?itok=esv16EWO) /* The background image */
+    url(../../assets/cashew.png) /* The background image */
     !important; /* Gradient with transparent area */
 }
 
