tcb tca banner updated and redirection added

--- a/src/components/tcbTca/tcbTca.scss
+++ b/src/components/tcbTca/tcbTca.scss
@@ -14,7 +14,7 @@
     background-size: 50%;
     background: 
     linear-gradient(90deg, rgba(0, 213, 255, 0) 10%, #ccc 100%),
-    url(../../assets/cashew.png) /* The background image */
+    url(../../assets/cashew.jpg) /* The background image */
     !important; /* Gradient with transparent area */
 }
 
