guardian eye - login and attack surface

--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -8,7 +8,7 @@
 }
 
 .chat-text {
-    // color: #fff;
+    // color: #000;
     font-family: Gilroy-Bold;
     font-size: 1.5rem;
     font-style: normal;
@@ -32,7 +32,7 @@
     }
 
     input, textarea {
-        color: #fff !important;
+        color: #000 !important;
         border: none !important;
         outline: none !important;
         font-size: 14px !important;
