--- a/src/components/dashboard/components/topSellingProducts/topSellingProducts.scss
+++ b/src/components/dashboard/components/topSellingProducts/topSellingProducts.scss
@@ -5,7 +5,7 @@
     border-bottom: 1px dashed #E1E3EA;
 
     .product-item-title {
-        color: #fff;
+        color: #000;
         font-family: Inter;
         font-size: 12px;
         font-style: normal;
@@ -14,7 +14,7 @@
     }
 
     .product-item-desc {
-        color: #fff;
+        color: #000;
         font-family: Inter;
         font-size: 11px;
         font-style: normal;
@@ -23,7 +23,7 @@
     }
 
     .product-item-price {
-        color: #fff;
+        color: #000;
         font-family: Inter;
         font-size: 12px;
         font-style: normal;
