--- a/src/components/tcbProductDetails/tcbProductDetails.scss
+++ b/src/components/tcbProductDetails/tcbProductDetails.scss
@@ -15,7 +15,7 @@
 }
 
 .price-card-price {
-    color: #fff;
+    color: #000;
     font-family: Gilroy-SemiBold;
     font-size: 32px;
     font-style: normal;
@@ -24,7 +24,7 @@
 }
 
 .price-card-desc {
-    color: #fff;
+    color: #000;
     font-family: Inter;
     font-size: 14px;
     font-style: normal;
@@ -58,7 +58,7 @@
 }
 
 .total-records-text {
-    color: #FFF;
+    color: #000;
     text-align: center;
     font-family: Gilroy-SemiBold;
     font-size: 20px;
